--- a/content/02_gof.tex
+++ b/content/02_gof.tex
@@ -333,6 +333,7 @@ Reduziert chaotische Abhängigkeiten zwischen Objekten. Das Pattern verhindert d
 
 \includegraphics[width=\linewidth]{memento.png} \\
 
+\columnbreak
 \textbf{Dynamics}
 
 \includegraphics[width=0.7\linewidth]{memento_dynamic.png}
