--- a/content/03_beyond_gof.tex
+++ b/content/03_beyond_gof.tex
@@ -82,6 +82,9 @@ Unterstützt die gekapselte Iteration über eine Sammlung, indem die Verantwortu
     \item Hebelt Command Objects aus
 \end{itemize}
 
+\vfill\null
+\columnbreak
+
 \subsection{Batch Method}
 \subsubsection{Problem}
 \begin{itemize}
