--- a/content/07_meta.tex
+++ b/content/07_meta.tex
@@ -18,7 +18,7 @@ Lösen übliche Frameworker's Probleme
     \end{itemize}
     \item Most frameworks use Reflection to locate implementations of extension points and hooks
 \end{itemize}
-
+\vspace{10pt}
 \textbf{Usage}
 \begin{itemize}
     \item Classes
@@ -62,6 +62,9 @@ Die Möglichkeit das ein Programm sein eigener Ausführungs-Zustand modifizieren
     \item Unterstützung für viele Arten von Änderungen
 \end{itemize}
 \vspace{10pt}
+
+\columnbreak
+
 \textbf{Liabilities}
 \begin{itemize}
     \item Produziert nicht-transparente ''black magic'' APIs
@@ -133,7 +136,7 @@ Attribute sollen nach der Compilation anbaubar und abbaubar sein. Objekte teilen
 \end{itemize}
 
 \subsubsection{Solution}
-Liefert Objekte mit einer ''Porperty List''. Diese Liste erlaubt die Verbindung von Namen mit anderen Werten oder Objekten
+Liefert Objekte mit einer ''Property List''. Diese Liste erlaubt die Verbindung von Namen mit anderen Werten oder Objekten
 
 \begin{itemize}
     \item Property list maps attribute names to values
